--- a/views/index.html
+++ b/views/index.html
@@ -8,17 +8,16 @@
     <title>Lego World</title>
     
 </head>
-<body>
+<body tabindex="-1">
 
-        <div class="dropdown">
+        <div style="grid-row-end: auto; display: grid; grid-template-columns: 1fr auto;" >
             
             <ul tabindex="0" class="menu menu-sm dropdown-content right-0 mt-3 z-[1] p-2 shadow bg-base-100 rounded-box w-52">
-              <li><a href="./about">About</a></li>
               <li>
                 <details>
                   <summary>
                     Themes
-                  </summary>
+                  </summary>  
                   <ul class="p-2 bg-base-100">
                     <li><a href="/lego/sets?theme=Icons">Icons</a></li>
                     <li><a href="/lego/sets?theme=Avatar">Avatar</a></li>
@@ -27,9 +26,14 @@
                 </details>
               </li>
             </ul>
+            <ul tabindex="0" class="menu menu-sm dropdown-content right-0 mt-3 z-[1] p-2 shadow bg-base-100 rounded-box w-52">
+              <li><a href="./about">About</a></li>
+            </ul>
+            
+
           </div>
         
-      <div class="hero min-h-screen bg-base-200 md:container md:mx-auto">
+      <div class="hero min-h-screen bg-base-200 md:container md:mx-auto" >
         <div class="hero-content text-center">
           <div class="max-w-md">
             <h1>Pre release Lego Sets</h1>
@@ -38,10 +42,12 @@
           </div>
         </div>
       </div>
-      <div class="container mx-auto pl-6  bg-base-600">
-        <div class="card w-96 bg-stone-900 shadow-2xl">
+
+      
+      <div class="container mx-auto pl-6  bg-base-600" style="display: flex; flex-wrap: wrap; justify-content: space-around;">
+        <div class="card w-96 bg-stone-900 shadow-2xl" >
             <figure>
-                <img  style="max-width: 50%;" src="https://cdn.rebrickable.com/media/sets/10314-1.jpg" alt="Dried Flower Centerpiece" />
+                <img  style="max-width: 100%;" src="https://cdn.rebrickable.com/media/sets/10314-1.jpg" alt="Dried Flower Centerpiece" />
               </figure>
               <div class="card-body">
                 <h2 >Dried Flower Centerpiece</h2>
@@ -51,9 +57,10 @@
                 </div>
               </div>
         </div>
+
             <div class="card w-96 bg-stone-900 shadow-2xl">
                 <figure>
-                    <img  style="max-width: 50%;" src="https://cdn.rebrickable.com/media/sets/10316-1.jpg" alt="Lord of the Rings: Rivendell" />
+                    <img  style="max-width: 100%;" src="https://cdn.rebrickable.com/media/sets/10316-1.jpg" alt="Lord of the Rings: Rivendell" />
                   </figure>
                   <div class="card-body">
                     <h2 >Lord of the Rings: Rivendell</h2>
@@ -63,9 +70,10 @@
                     </div>
                   </div>
             </div>
+            <br>
             <div class="card w-96 bg-stone-900 shadow-2xl">
                 <figure>
-                    <img  style="max-width: 50%;" src="https://cdn.rebrickable.com/media/sets/10320-1.jpg" alt="Eldorado Fortress" />
+                    <img  style="max-width: 80%;" src="https://cdn.rebrickable.com/media/sets/10320-1.jpg" alt="Eldorado Fortress" />
                   </figure>
                   <div class="card-body">
                     <h2 >Eldorado Fortress</h2>
