--- a/views/set.ejs
+++ b/views/set.ejs
@@ -13,7 +13,7 @@
             //const set = JSON.stringify(set) ;
                 
 
-            document.getElementById('set-name').textContent = '<%= set.name %>';
+            document.getElementById('set-name').textContent = '<div><%= set.name %></div>';
             document.getElementById('set-blurb').innerHTML = `<p>Below are the details of the set: '<%= set.name %>'</p>`;
             document.getElementById('set-image').src = '<%= set.img_url %>';
             document.getElementById('set-name-detail').textContent = '<%= set.name %>';
